# mipt_formal_prac

./: .gitmodules  README.md
hw1/: .gitignore  CMakeLists.txt  README.md  main.cpp
hw1/include/: Automaton.h  State.h  Transition.h
hw1/src/: Automaton.cpp  State.cpp  Transition.cpp
hw1/tests/: .gitignore  CMakeLists.txt  Test.cpp  Test.h  main.cpp
hw2/: README.md  main.cpp
hw2/include/: Character.h  Grammar.h  Rule.h
hw2/src/: Character.cpp  Grammar.cpp  Rule.cpp
hw2/tests/: Test.cpp  Test.h
hw3/: main.cpp
hw3/include/: Grammar.h  Rule.h  State.h
hw3/src/: Grammar.cpp  Rule.cpp  State.cpp
hw3/tests/: Test.cpp  Test.h
